more format changes

--- a/univariate_markdown.Rmd
+++ b/univariate_markdown.Rmd
@@ -185,29 +185,27 @@ summary(all_mod_abies)
 summary(all_mod_acer)
 ```
 
-identifying outlers and modifying acer because of them----
-This code was used to identify the outliers... identify(acer$cover ~ acer$tci, n = 2)
-Remove tci outliers
+
+identifying outliers and modifying acer because of them----
+Remove tci outliers and streamdistance outliers 
 ```{r}
+# This code was used to identify the outliers...
+# identify(acer$cover ~ abies$tci)
+# identify(acer$cover ~ abies$streamdist)
+plot(cover ~ streamdist, data = acer, xlab = 'Stream Distance (m)',
+     ylab = 'Cover', main= 'acer stream distance versus cover')
 plot(cover ~ tci, data = acer, xlab = 'Topographic Coverage Index',
      ylab = 'Cover', main= 'acer tci versus cover')
-acer_subset = acer[-c(121, 318), ]
+acer_subset = acer[-c(121, 318, 297,56,187), ]
+# note... outliers 56 and 187 removed due to work further in assignment not tci or streamdistance outliers
+
+# new plots without the outliers
 plot(cover ~ tci, data= acer_subset, main="acer subset tci versus cover", xlab='tci', ylab= 'cover')
+plot(cover ~ streamdist, data = acer_subset, xlab = 'Stream Distance (m)',
+     ylab = 'Cover', main= 'acer stream distance versus cover subset')
 
 dim(acer)
 dim(acer_subset)
-```
-
-plots redone here for convenience... can take out in final probably----
-```{r}
-
-plot(cover ~ streamdist, data = acer, xlab = 'Stream Distance (m)',
-     ylab = 'Cover', main= 'acer stream distance versus cover')
-acer_subset = acer[-c(121, 318, 297,56,187), ]
-dim(acer_subset)
-
-plot(cover ~ streamdist, data = acer_subset, xlab = 'Stream Distance (m)',
-     ylab = 'Cover', main= 'acer stream distance versus cover subset')
 ```
 
 new single variable models with the acersubset----
@@ -219,7 +217,7 @@ disturb_mod_acersubset = lm(cover ~ disturb, data = acer_subset)
 beers_mod_acersubset = lm(cover ~ beers, data = acer_subset)
 ```
 
-# comparing the original summaries to the subset without outliers----
+comparing the original summaries to the subset without outliers----
 ```{r}
 # elevation
 summary(elev_mod_acer)
@@ -247,47 +245,52 @@ summary(all_mod_acer)
 # removing the outliers did slightly improve the R-squared and adjusted R- squared, it also greatly increased the significance of tci( lowered the p value), so the subset without the outliers will be used from now on
 ```
 
-# model with elev, tci, and beers----
+model with elev, tci, and beers----
+```{r}
+# acer
 etb_mod_acersubset = lm(cover ~ elev + tci + beers , data = acer_subset)
 summary(etb_mod_acersubset)
 
+# abies 
 etb_interaction_mod_acersubset = lm(cover ~ elev + tci + beers + tci * elev + elev * beers + beers * tci + beers * tci * elev , data = acer_subset)
 summary(etb_interaction_mod_acersubset)
-
 # interaction effect with elev:tci and elev:beers
 AIC(etb_interaction_mod_acersubset)
-#[1] 3413.76
 AIC(etb_mod_acersubset)
-#[1] 3419.997
-## the above model just proved my suspicions on how important elevation was to the model, it will not be used over other models however because the r squared was lower
+```
+the above model just proved my suspicions on how important elevation was to the model, it will not be used over other models however because the r squared was lower
 
-#adding elevation interaction to main model-------------
+adding only elevation interaction to main model-------------
+```{r}
+# acer
 elev_interaction_mod_acersubset = lm(cover ~ elev + tci + streamdist + disturb + beers + elev * tci + elev * beers + elev * streamdist + elev * disturb, data = acer_subset)
 summary(elev_interaction_mod_acersubset)
-
-elev_interaction_mod_acersubset = lm(cover ~ elev + tci + streamdist + disturb + beers + elev * tci + elev * beers + elev * streamdist + elev * disturb, data = acer_subset)
 
 # adding interaction to whole model----
 full_mod_acersubset = update(all_mod_acersubset, ~ . + elev * disturb * tci * streamdist * beers)
 all_mod_acersubset = lm(cover ~ elev + tci + streamdist + disturb + beers, data = acer_subset)
 
+# comparing the three acer summary outputs 
 summary(all_mod_acersubset)
 summary(elev_interaction_mod_acersubset)
 summary(full_mod_acersubset) 
-# this makes it absurdly long, but it does increase the r-squared...
 
-
+# also comparing the anova outputs and AIC values
 anova(all_mod_acersubset, full_mod_acersubset)
-
 AIC(full_mod_acersubset)
 AIC(all_mod_acersubset)
 AIC(elev_interaction_mod_acersubset)
-# ele
 
-# remove abies outlier in tci and elevation  
-# identify(abies$cover ~ abies$tci, n=2)
+# this makes it absurdly long, but it does increase the r-squared... however it is very hard to explain all of those interactions so it also would not be very realistic to present this to an audience without being able to describe the interactions you are presenting.
+```
+
+remove abies outlier in tci and elevation  
+```{r}
+# identify(abies$cover ~ abies$tci)
+# identify(abies$cover ~ abies$elevation)
 
 abies_subset = abies[-c(121,33,109,56,53), ]
+# note... outliers 109, 56, 53 # note... removed due to work further in assignment not tci or elevation outliers
 dim(abies_subset)
 
 # comparing the main models of original and subset
@@ -305,10 +308,13 @@ summary(elev_interaction_mod_abiessubset)
 summary(full_mod_abiessubset) 
 
 # interaction had an even larger effect on the abies distributions
+# this could be attributed to overfitting however
+```
 
 
-# Poisson calculation start----
-# assume all poisson calculations are done using the subsets with outliers removed
+Poisson calculation start----
+assume all poisson calculations are done using the subsets with outliers removed
+```{r}
 summary(elev_interaction_mod_abiessubset)
 summary(elev_interaction_mod_acersubset)
 
@@ -340,9 +346,10 @@ summary(tci_mod_acer_poi)
 summary(streamdist_mod_acer_poi)
 summary(disturb_mod_acer_poi)
 summary(beers_mod_acer_poi)
+```
 
-
-# poisson with elevation interaction only----
+poisson with elevation interaction only----
+```{r}
 abies_poi = glm(cover ~ elev + tci + streamdist + disturb + beers + elev * tci + elev * beers + elev * streamdist + elev * disturb, data = abies_subset, 
                 family='poisson')
 acer_poi = glm(cover ~ elev + tci + streamdist + disturb + beers + elev * tci + elev * beers + elev * streamdist + elev * disturb, data = acer_subset, 
@@ -350,14 +357,13 @@ acer_poi = glm(cover ~ elev + tci + streamdist + disturb + beers + elev * tci + 
 
 summary(abies_poi)
 summary(acer_poi)
+```
 
-# pseudo r ^2
+pseudo r ^2
+```{r}
 pseudo_r2 = function(glm_mod) {
   1 -  glm_mod$deviance / glm_mod$null.deviance
 }
-pseudo_r2(abies_poi)
-pseudo_r2(acer_poi)
-
 # comparing poisson with equivalent OLS----
 summary(abies_poi)
 summary(elev_interaction_mod_abiessubset)
@@ -375,23 +381,17 @@ Anova(elev_interaction_mod_acersubset, type=3)
 
 # poisson might be better at estimating abies, but not acer based on the pseudo
 # r squared values
+```
 
-reduced <- stepAIC(full_mod_abiessubset)
-
-# model diagnostics with plot of model
-# observed vs predicted plot lines 
-# change order of levels to choose which is the intercept
-# use contrast to visualize level code
-
-# checking plots of the elevation interaction model and removing more outliers---
+checking plots of the elevation interaction model and removing more outliers---
+```{r}
 par(mfrow = c(2,2))
 plot(elev_interaction_mod_abiessubset)
-# removed a few more outliers
+# remove a few more outliers
 # take out 56, 109,53  from abies subset
-
 plot(elev_interaction_mod_acersubset)
 # take out 56 , 187 from acer
-
+```
 # semifinal models to use:----
 # elev_interaction_mod_acersubset, elev_interaction_mod_abiessubset
 # abies_poi (only includes elevation interaction)
